<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp">

        <DatePicker
            android:id="@+id/simpleDatePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:paddingLeft="10dp" />

        <TimePicker android:id="@+id/timePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/simpleDatePicker"
            android:timePickerMode="spinner"/>
        <LinearLayout
            android:id="@+id/tmp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/timePicker">
            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:layout_marginRight="5dp"/>

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="temperature"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/vent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tmp"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/vitesse" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="vitesse du vent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vent">

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/state" />

            <Spinner
                android:id="@+id/state"
                android:layout_width="160dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>